@@ -1,7 +1,7 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 30a444c58adaf9b99783d22d75d60c61 *configure
 8adf3ce5666c3984f190324b6b89d23d *DESCRIPTION
-b3817b0ca60c4e4982fdd6b6aa8b2551 *inst/NEWS.Rd
+a0868bcbf602512d69c987384f425c18 *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
 d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
@@ -15,7 +15,7 @@ e0d3b091b5182fdcc8868c93a2c59476 *man/topn.Rd
 5cbe08d5cbbf4968690f18c413ee2a38 *NAMESPACE
 7534da9b920a89b5c443b9dc19037658 *R/call.R
 fa0ca12018176564236efd16b8d8e9d8 *README.md
-3f91a678297239b5b4359f0b87cb5ac5 *src/dup.c
+2be11923dbf3fb39e3737372d78898a2 *src/dup.c
 05bdac0b6b6b90d1daca992adf237c6b *src/dupLen.c
 84dc17b4330566e5beb69626ad9d268e *src/fpos.c
 c362509861cd6835c1d8adbb0dce02b4 *src/iif.c
@@ -26,7 +26,7 @@ b6d184807563eb8d74a8586c598ed770 *src/init.c
 8e997b5d5d44af5cea7eafb48a4b9745 *src/nswitch.c
 27776fbace59c1a53bceaf3e502ce1cf *src/psum.c
 75f88aa2b5fbc936c6de93efaa8ff236 *src/topn.c
-f10eeb4aab95e22b60f21c27ba5b1297 *src/utils.c
+5b13330006c45b534ede418a9f91c4f4 *src/utils.c
 3476a1e2381bb86f68a72844ee61bc7b *src/vswitch.c
-afefc128b4b37566d4cc771f085b2ea1 *tests/test_kit.R
-d789511153e9afe973803cf590c53868 *tests/test_kit.Rout.save
+f3336cc30059001b1d1bd49bdb08d4f9 *tests/test_kit.R
+722437460a359920d92163a82f6bb46a *tests/test_kit.Rout.save
